2008-05-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/configurationwizard.py:
	video/audio producer needs to be set before setting the overlay
	* flumotion/component/plugs/cortado/wizard_gtk.py:
	We need to convert to a fraction first, before attempting
	to parse it

	* flumotion/admin/gtk/Makefile.am:
	* flumotion/admin/gtk/addformatwizard.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/parts.py:
	Add a new menu item for adding a new streamer format.
	Fixes #933

2008-05-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/models.py:
	* flumotion/wizard/save.py:
	Add a new state to the models, which is used to reference
	to existing models, we do not want to write/validate or
	resolve naming conflicts on them

2008-05-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/plugs/cortado/wizard_gtk.py:
	framerate can be a fraction, but cortado only accepts floats,
	convert it appropriately here.

	* flumotion/common/xmlwriter.py (XMLWriter._calcAttrsLength):
	check if Value is None before quoting it, raise a helpful
	exception if it is.

	* flumotion/component/consumers/httpstreamer/wizard_gtk.py:
	* flumotion/component/encoders/theora/wizard_gtk.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/conversionsteps.py:
	Add two getAudioProducer/getVideoProducer methods to the wizard,
	to avoid fetching the production step everywhere.
	Check if license step and production step exists before adding them.

2008-05-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/wizard.py:
	Add a new method hasStep, skip calling getFirstStep as it is
	not used, update self._steps in _setStep instead of _showNextStep,
	so the first step is actually added to the dict.

2008-05-26  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/client.py:
	* flumotion/wizard/configurationwizard.py:
	Remove a constructor argument from the configuration
	wizard and move it to a setter accessor.
